--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
 
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivity2"
             android:theme="@style/Theme.Tedamobile.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
