--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,13 +42,8 @@
 
         </activity>
         <activity
-            android:name=".MainActivity2"
+            android:name=".MainActivity"
             android:theme="@style/Theme.Tedamobile.NoActionBar">
-    <!--        <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
