--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,15 +15,17 @@ android {
         applicationId "th.or.etda.teda.mobile"
         minSdkVersion 26
         targetSdkVersion 30
-        versionCode 33
-        versionName "1.0.33"
+        versionCode 37
+        versionName "1.0.37"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
